--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>fr.jmmc.jmcs</groupId>
             <artifactId>jmcs</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>TRUNK</version>
         </dependency>
     </dependencies>
 
