--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
     <name>AppLauncherRegistry</name>
     <url>http://www.jmmc.fr/applauncher</url>
 
+    <properties>
+	<!-- do copy dependencies (JNLP) -->
+	<mdep.skip>false</mdep.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>fr.jmmc.jmcs</groupId>
