--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-      <groupId>fr.jmmc</groupId>
-      <artifactId>jmmc</artifactId>
-      <version>TRUNK</version>
-      <!--  please install first parent pom from jMCS/parent-pom directory -->
+        <groupId>fr.jmmc.applauncher</groupId>
+        <artifactId>applauncher</artifactId>
+        <version>TRUNK</version>
     </parent>
 
     <groupId>fr.jmmc.smprsc</groupId>
