--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!--
+*******************************************************************************
+* JMMC project ( http://www.jmmc.fr ) - Copyright (C) CNRS.
+*******************************************************************************
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-      <groupId>fr.jmmc</groupId>
-      <artifactId>jmmc</artifactId>
+        <groupId>fr.jmmc</groupId>
+        <artifactId>jmmc</artifactId>
         <version>TRUNK</version>
-      <!--  please install first parent pom from jMCS/parent-pom directory -->
+        <!--  please install first parent pom from jMCS/parent-pom directory -->
     </parent>
 
     <groupId>fr.jmmc.smprsc</groupId>
